--- a/src/duelink.html
+++ b/src/duelink.html
@@ -62,6 +62,7 @@
                     </div>
 
                     <div class="center">
+                        <button class="btn btn-success" onclick="testDisplay()">Test Display</button>                     
                         <button class="btn btn-primary" onclick="sendLedOn()">Led On</button>
                         <button class="btn btn-primary" onclick="sendLedOff()">Led Off</button>
                     </div>
@@ -138,6 +139,20 @@
 
     function sleep(ms) {
         return new Promise(resolve => setTimeout(resolve, ms));
+    }
+
+    async function testDisplay() {
+        Check();
+        var addr = 60;
+      
+        await duedemo.Display.Configuration(addr);
+        for (var i = 0; i < 10; i++) {
+            
+            await duedemo.Display.Clear(0);
+            await duedemo.Display.DrawText("count: " + i, 1, 10, 10);
+            await duedemo.Display.Show();
+            await duedemo.System.Wait(500);
+        }
     }
 
     async function sendLedOn() {
